Update API AddUserGeneset to accept other symbols
